[package]
name = "deso-random-question"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
shuffle = "0.1.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
deso = "0.2.1"
dotenv = "0.15.0"
serde_json = "1.0.89"
